--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Mes produits</a>
+    <a class="navbar-brand" href="#">Mes evenements</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/produits">Home</a>
+          <a class="nav-link" routerLink="/evenements">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/add-produits">Ajouter</a>
+          <a class="nav-link" routerLink="/add-evenements">Ajouter</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"></a>
