--- a/src/app/add-evenement/add-evenement.component.html
+++ b/src/app/add-evenement/add-evenement.component.html
@@ -19,6 +19,14 @@
             <label>date de creation</label>
             <input type="date"[(ngModel)]="newEvenement.dateCreation" name="dateCreation" class="form-control">
         </div>
+        <div class="col-sm-4 col-md-4 col-lg-4">
+            <label>Genre</label>
+            <select class="form-control form-control-lg" id="idGenre" name="idGenre" [(ngModel)]="newIdGenre">
+                <option *ngFor="let gen of genres" [value]="gen.idGenre">
+                    {{gen.nomGenre}}
+                </option>
+            </select>
+        </div>
         <div class="mt-2">
             <button type="submit" (click)="addEvenement()" class="btn btn-success">ajouter</button>
             <div>
