--- a/src/app/update-evenement/update-evenement.component.html
+++ b/src/app/update-evenement/update-evenement.component.html
@@ -22,6 +22,14 @@
             (ngModelChange)=" currentEvenement.dateCreation= $event" name="dateCreation"
             class="form-control">
         </div>
+        <div class="col-sm-4 col-md-4 col-lg-4">
+            <label>Genre</label>
+            <select class="form-control form-control-lg" id="idCat" name="idCat" [(ngModel)]="updateGenreId">
+                <option *ngFor="let gen of genre" [value]="gen.idGenre">
+                    {{gen.nomGenre}}
+                </option>
+            </select>
+        </div>
         <div class="mt-2">
             <button type="submit" (click)="updateEvenement()" class="btn btn-success">modifier</button>
             
