--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
           <a class="nav-link" routerLink="/rechercheParGenre">Recherche par Genre</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/rechercheParNom">Recherche par Nom</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#"></a>
         </li>
       </ul>
