--- a/src/app/add-evenement/add-evenement.component.html
+++ b/src/app/add-evenement/add-evenement.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div>
-        <h2>Ajouter un nouveau evenement</h2>
+        <h2>Ajouter un nouvel evenement</h2>
     </div>
     <form>
         <div class="col-sm-2 col-md-2 col-lg-2">
