--- a/src/app/recherche-par-nom/recherche-par-nom.component.html
+++ b/src/app/recherche-par-nom/recherche-par-nom.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <form class="form-inline">
         <div class="form-group mx-sm-3 mb-2 mt-2 ">
-        <label>Nom Produit</label>
+        <label>Nom évenement</label>
         <input 
         #nom 
         [(ngModel)]="searchTerm" 
