--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
             </li>
             <li><a class="dropdown-item" routerLink="/rechercheParGenre">Recherche par Genre</a></li>
             <li><a class="dropdown-item" routerLink="/rechercheParNom">Recherche par Nom</a></li>
+            <a class="dropdown-item" routerLink="/listeGenres" >Gestion des genres</a>
           </ul>
         </li>
       </ul>
