--- a/src/app/evenements/evenements.component.html
+++ b/src/app/evenements/evenements.component.html
@@ -1,27 +1,34 @@
+<table class="table table-striped">
+    <thead>
+      <tr>
+        <th>id</th>
+        <th>Nom</th>
+        <th>Prix</th>
+        <th>Date evenement</th>
+        <th>Genre</th> <!-- Genre column -->
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let evenement of evenements">
+        <td>{{evenement.idEvenement}}</td>
+        <td>{{evenement.nomEvenement}}</td>
+        <td>{{evenement.prixEvenement}}</td>
+        <td>{{evenement.dateCreation | date:'dd/MM/yyyy'}}</td> <!-- Date formatted -->
+        <td>{{evenement.genre.nomGenre}}</td> <!-- Genre name -->
+        <td>
+          <a *ngIf="authService.isAdmin()" class="btn btn-danger" (click)="supprimerEvenement(evenement)">
+            Supprimer
+          </a>
+        </td>
+        <td>
+          <a *ngIf="authService.isAdmin()" class="btn btn-success" [routerLink]="['/updateEvenement', evenement.idEvenement]">
+            Modifier
+          </a>
+        </td>
+        
 
-    <div class="container">
-        <div class="card shadow mb-4">
-            <div class="card-body">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>id</th><th>Nom</th><th>Prix</th><th>date de creation</th><th>Genre</th>
-                    </tr>
-                </thead>
-                <tbody *ngFor="let evenement of evenements">
-                    <tr>
-                        <td>{{evenement.idEvenement}}</td>
-                        <td>{{evenement.nomEvenement}}</td>
-                        <td>{{evenement.prixEvenement}}</td>
-                        <td>{{ evenement?.dateCreation | date:'dd/MM/yyyy' }}</td>
-                        <td>{{evenement.genre.nomGenre}}</td>
-                        <td><a *ngIf="authService.isAdmin()"
-                            class="btn btn-danger" (click)="SupprimerEvenement(evenement)">Supprimer</a></td>
-                        <td><a *ngIf="authService.isAdmin()" class="btn btn-success"[routerLink]="['/updateEvenement',evenement.idEvenement]">modifier</a></td>
-                       
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    </div>
+          
+      </tr>
+    </tbody>
+  </table>
+  
