--- a/src/app/recherche-par-nom/recherche-par-nom.component.html
+++ b/src/app/recherche-par-nom/recherche-par-nom.component.html
@@ -7,9 +7,10 @@
         [(ngModel)]="searchTerm" 
         name="searchTerm" 
         class="form-control" 
-        (keyup)="onKeyUp(searchTerm)" 
-        placeholder="Rechercher un événement"
-      >
+        placeholder="Rechercher un événement">
+        <!-- (keyup)="onKeyUp(searchTerm)"  -->
+        
+      
     </div>
     </form>
         
