--- a/src/app/recherche-par-genre/recherche-par-genre.component.html
+++ b/src/app/recherche-par-genre/recherche-par-genre.component.html
@@ -6,7 +6,7 @@
             <select class="form-control form-control-lg" id="idGenre" name="idGenre" [(ngModel)]="idGenre"
                 (change)="onChange()">
         
-                <option *ngFor="let genre of Genres" value="{{genre.idGenre}}">
+                <option *ngFor="let genre of genres" value="{{genre.idGenre}}">
                     {{genre.nomGenre}}
                 </option>
             </select>
